--- a/items-admin-panel/src/static-css/reset.css
+++ b/items-admin-panel/src/static-css/reset.css
@@ -15,9 +15,11 @@ p,
 figure,
 blockquote,
 dl,
-dd {
+dd,
+li {
   margin: 0;
   padding: 0;
+  scrollbar-width: thin;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
